templates/mcafee-bastion.template
AWSTemplateFormatVersion: '2010-09-09'
Description: McAfee-ePO Bastion Stack which manages the remote management of the machines.
Metadata:
  LICENSE: Apache License Version 2.0
  AWS::CloudFormation::Interface:
    ParameterGroups:
      - Label:
          default: McAfee ePolicy Orchestrator Platform Configuration
        Parameters:
          - Environment
          - KeyPairName
      - Label:
          default: Peer-Parent Stack Configuration
        Parameters:
          - ParentStack
      - Label:
          default: Network Configuration
        Parameters:
          - VPCID
          - PublicSubnet1ID
          - PublicSubnet2ID
      - Label:
          default: Bastion Stack Configuration
        Parameters:
          - ImageID
          - RemoteAccessCIDR
      - Label:
          default: Administration Configuration
        Parameters:
          - AdminEmailAddress
    ParameterLabels:
      Environment:
        default: Deployment Environment
      KeyPairName:
        default: AWS Key Pair Name
      ParentStack:
        default: Parent Stack
      VPCID:
        default: VPC ID
      PublicSubnet1ID:
        default: Public Subnet 1 ID
      PublicSubnet2ID:
        default: Public Subnet 2 ID
      ImageID:
        default: Bastion ImageID
      RemoteAccessCIDR:
        default: External Bastion Access CIDR
      AdminEmailAddress:
        default: Operator Email
Parameters:
  Environment:
    AllowedValues:
      - 'Production'
      - 'Development'
    Default: 'Production'
    Description: What is the targeted deployment environment?
    Type: String
  KeyPairName:
    Description: The name of an existing public/private key pair, which allows you to securely connect to your instance after it launches.
    Type: AWS::EC2::KeyPair::KeyName
  VPCID:
    Description: ID of your existing VPC for deployment(e.g., vpc-fd990584)
    Type: AWS::EC2::VPC::Id
  PublicSubnet1ID:
    Description: ID of public subnet 1 in Availability Zone 1 for the ELB load balancer (e.g., subnet-9bc642ac)
    Type: AWS::EC2::Subnet::Id
  PublicSubnet2ID:
    Description: ID of public subnet 2 in Availability Zone 2 for the ELB load balancer (e.g., subnet-e3246d8e)
    Type: AWS::EC2::Subnet::Id
  ParentStack:
    Description: Parent stack name by which bastion stack is deriving if any.
    MinLength: 1
    MaxLength: 256
    Type: String
  ImageID:
    Description: AMI id for bastion instance, starts with ami
    MinLength: 1
    MaxLength: 256
    Type: String
  RemoteAccessCIDR:
    AllowedPattern: ^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\/([0-9]|[1-2][0-9]|3[0-2]))$
    ConstraintDescription: CIDR block parameter must be in the form x.x.x.x/x.
    Description: >-
      CIDR block that allows external SSH access to the bastion hosts,
      e.g., x.x.x.x/16-28. We recommend that you set this value to a trusted
      CIDR block. For example, you might want to restrict access to your
      corporate network.
    Type: String
  AdminEmailAddress:
    AllowedPattern: >-
      ([a-zA-Z0-9_\-\.]+)@((\[[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.)|(([a-zA-Z0-9\-]+\.)+))([a-zA-Z]{2,8}|[0-9]{1,3})(\]?)
    ConstraintDescription: Must be a valid email address.
    Description: Email address that notifications of any operations will be sent. In addtion this will be used for tagging of ownership of resources.
    Type: String

Rules:
  KeyPairsNotEmpty:
    Assertions:
      - Assert: !Not
          - 'Fn::EachMemberEquals':
              - 'Fn::RefAll': 'AWS::EC2::KeyPair::KeyName'
              - ''
        AssertDescription: AWS Key Pair Name parameters must not be empty
  SubnetsInVPC:
    Assertions:
    - Assert:
        Fn::EachMemberIn:
        - Fn::ValueOfAll:
          - AWS::EC2::Subnet::Id
          - VpcId
        - Fn::RefAll: AWS::EC2::VPC::Id
      AssertDescription: All subnets must in the VPC

Resources:
  # EIP for Bastion Instance
  BastionEIP:
    Type: AWS::EC2::EIP
    Properties:
      Domain: !Ref VPCID

  # Bastion Internet Security Group
  BastionInternetSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Internet Security group for bastion instance
      VpcId:  !Ref VPCID
      SecurityGroupEgress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp:
            0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp:
            0.0.0.0/0
        - IpProtocol: -1
          FromPort: 0
          ToPort: 65535
          CidrIp:
            0.0.0.0/0
      Tags:
        - Key: Name
          Value: !Sub ${AWS::StackName}-BastionInternetSecurityGroup
        - Key: Owner
          Value: !Ref AdminEmailAddress
        - Key: Environment
          Value: !Ref Environment
        - Key: Product
          Value: McAfee-ePO-Bastion
        - Key: Solution
          Value: McAfee-ePO
        - Key: mcafee:cloudformation:stack-name
          Value: !Sub ${ParentStack}

  # Bastion Internal Security Group
  BastionInternalSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Internal Security group for bastion instance.
      VpcId: !Ref VPCID
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp:
            !Ref RemoteAccessCIDR
      Tags:
        - Key: Name
          Value: !Sub ${AWS::StackName}-BastionInternalSecurityGroup
        - Key: Owner
          Value: !Ref AdminEmailAddress
        - Key: Environment
          Value: !Ref Environment
        - Key: Product
          Value: McAfee-ePO-Bastion
        - Key: Solution
          Value: McAfee-ePO
        - Key: mcafee:cloudformation:stack-name
          Value: !Sub ${ParentStack}

  # EC2 instance role
  BastionEC2Role:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Version: '2012-10-17'
        Statement:
          - Effect: Allow
            Principal:
              Service:
                - ec2.amazonaws.com
            Action:
              - sts:AssumeRole
      Path: /
      Policies:
        - PolicyName: BastionEC2Role
          PolicyDocument:
            Version: '2012-10-17'
            Statement:
              # IAM to let bastion instance associate EIP to self
              - Effect: Allow
                Action:
                  - ec2:AssociateAddress
                Resource: '*'

  # EC2 Instance Profile
  BastionEC2InstanceProfile:
    Type: AWS::IAM::InstanceProfile
    DependsOn: BastionEC2Role
    Properties:
      Path: /
      Roles:
        - !Ref BastionEC2Role

  # Bastion Launch config
  BastionLaunchConfig:
    Type: AWS::AutoScaling::LaunchConfiguration
    Properties:
      AssociatePublicIpAddress: true
      IamInstanceProfile: !Ref  BastionEC2InstanceProfile
      ImageId: !Ref ImageID
      InstanceType: t2.micro
      KeyName: !Ref KeyPairName
      SecurityGroups:
        - !Ref BastionInternalSecurityGroup
        - !Ref BastionInternetSecurityGroup
      UserData:
        'Fn::Base64': !Sub |
          #!/bin/bash -x
          aws ec2 associate-address --instance-id $(curl http://169.254.169.254/latest/meta-data/instance-id) --public-ip ${BastionEIP} --allow-reassociation --region ${AWS::Region}

  # Bastion autoscaling group
  BastionAutoscalingGroup:
    Type: AWS::AutoScaling::AutoScalingGroup
    Properties:
      DesiredCapacity: 1
      HealthCheckType: EC2
      HealthCheckGracePeriod: 300
      LaunchConfigurationName: !Ref BastionLaunchConfig
      MaxSize: 1
      MinSize: 1
      Tags:
        - Key: Name
          PropagateAtLaunch: true
          Value: !Sub ${ParentStack}-bastion
        - Key: Owner
          PropagateAtLaunch: true
          Value: !Ref AdminEmailAddress
        - Key: Environment
          PropagateAtLaunch: true
          Value: !Ref Environment
        - Key: Product
          PropagateAtLaunch: true
          Value: McAfee-ePO-Bastion
        - Key: Solution
          PropagateAtLaunch: true
          Value: McAfee-ePO
        - Key: mcafee:cloudformation:stack-name
          PropagateAtLaunch: true
          Value: !Sub ${ParentStack}
      VPCZoneIdentifier:
        - !Ref PublicSubnet1ID
        - !Ref PublicSubnet2ID


Outputs:
  BastionStackName:
    Description: Bastion stack name
    Value: !Ref AWS::StackName
  BastionAutoscalingGroup:
    Description: Bastion auto scaling group name
    Value: !Ref BastionAutoscalingGroup
  BastionLaunchConfig:
    Description: Bastion launch config name
    Value: !Ref BastionLaunchConfig
  BastionEIP:
    Description: Bastion EIP address
    Value: !Ref BastionEIP
  BastionSecurityGroupID:
    Description: Bastion Security Group
    Value: !Ref BastionInternetSecurityGroup
